kubernetes/django/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite
  namespace: test-namespace
  labels:
    app: mysite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysite
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysite
    spec:
      imagePullSecrets:
        - name: deusto-registry
      containers:
        - name: mysite
          image: registry.apps.deustotech.eu/kubernetes-test/mysite:v0.0.3
          ports:
            - containerPort: 8000
