kubernetes/django/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysite
  namespace: test-namespace
spec:
  selector:
    app: mysite
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
